--- a/src/assets/styles/cmps/card-details-cmps/_card-details-checklists.scss
+++ b/src/assets/styles/cmps/card-details-cmps/_card-details-checklists.scss
@@ -1,3 +1,16 @@
 .card-checklists-container {
   display: none;
 }
+
+//logo
+.checklist-logo {
+  height: 32px;
+  width: 32px;
+}
+
+.checklist-header h3 {
+  margin-right: auto;
+}
+
+.checklist-wrapper {
+}
