--- a/src/assets/styles/cmps/_side-nav.scss
+++ b/src/assets/styles/cmps/_side-nav.scss
@@ -25,7 +25,7 @@
   background-color: rgba(0, 0, 0, 0.15);
 }
 .nav-logo {
-  background: linear-gradient(#b22865, #cd5a91);
+  background: linear-gradient(#006644, #00875a);
   display: flex;
   align-items: center;
   justify-content: center;
@@ -38,6 +38,7 @@
   height: 32px;
   width: 32px;
   margin-right: 0.7rem;
+  text-transform: uppercase;
 }
 
 .openMenu {
@@ -48,20 +49,20 @@
   transition: 0.5s cubic-bezier(0.8, 0.5, 0.2, 1.4);
 }
 
-.nav-content{
+.nav-content {
   width: 100%;
-  hr{
+  hr {
     margin: 10px 0;
   }
 }
-.small-nav-bar-workspace{
+.small-nav-bar-workspace {
   color: #172b4d;
   font-size: 14px;
   font-weight: 600;
   letter-spacing: -0.003em;
   line-height: 16px;
   margin-top: 16px;
-  color: #5E6C84;
+  color: #5e6c84;
   margin: 0;
   flex: 1;
   overflow: hidden;
@@ -69,7 +70,7 @@
   white-space: nowrap;
   display: flex;
   justify-content: space-between;
-  button{
+  button {
     border: none;
     display: flex;
     align-items: center;
@@ -77,8 +78,7 @@
     padding: 0px;
   }
 
-  .small-nav-bar-btn-container{
+  .small-nav-bar-btn-container {
     display: flex;
-
   }
 }
