--- a/src/assets/styles/cmps/card-details-cmps/_card-details-checklists.scss
+++ b/src/assets/styles/cmps/card-details-cmps/_card-details-checklists.scss
@@ -12,5 +12,9 @@
   margin-right: auto;
 }
 
-.checklist-wrapper {
+.action-logo {
+  width: 14px;
+  height: 14px;
+  filter: invert(31%) sepia(37%) saturate(567%) hue-rotate(179deg)
+    brightness(81%) contrast(80%);
 }
