--- a/src/assets/styles/cmps/_nav-bar-board.scss
+++ b/src/assets/styles/cmps/_nav-bar-board.scss
@@ -1,66 +1,77 @@
 .board-nav-bar-container {
-    justify-content: space-between;
-    align-items: center;
-    .sperator-nav-board {
-        border-left: 1px solid #ffffff3d;
-        // float: left;
-        height: 16px;
-        margin: 8px 8px 12px 4px;
-        color: transparent;
-        font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Noto Sans, Ubuntu, Droid Sans, Helvetica Neue,
-            sans-serif;
-        font-size: 14px;
-        font-weight: 400;
-        line-height: 20px;
-        -webkit-text-size-adjust: 100%;
-    }
-    .board-title {
-        opacity: 0.5;
-    }
+  justify-content: space-between;
+  align-items: center;
+  .sperator-nav-board {
+    border-left: 1px solid #ffffff3d;
+    // float: left;
+    height: 16px;
+    margin: 8px 8px 12px 4px;
+    color: transparent;
+    font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Noto Sans,
+      Ubuntu, Droid Sans, Helvetica Neue, sans-serif;
+    font-size: 14px;
+    font-weight: 400;
+    line-height: 20px;
+    -webkit-text-size-adjust: 100%;
+  }
+  .board-title {
+    opacity: 0.5;
+  }
 
-    button,
-    p {
-        color: #172b4d;
-        font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Noto Sans", "Ubuntu", "Droid Sans",
-            "Helvetica Neue", sans-serif;
-        font-size: 14px;
-        line-height: 20px;
-        font-weight: 400;
-        box-sizing: border-box;
-        display: inline-flex;
-        align-items: center;
-        justify-content: center;
-        border-radius: 3px;
-        height: 32px;
-        margin: 0 4px 4px 0;
-        max-width: 400px;
-        padding-left: 32px;
-        position: relative;
-        cursor: pointer;
-        padding: 6px 12px;
-        text-decoration: none;
-        box-shadow: none;
-        border: none;
-        transition-property: background-color, border-color, box-shadow;
-        transition-duration: 85ms;
-        transition-timing-function: ease;
-        background-color: rgba(255, 255, 255, 0.2);
-        color: #ffffff;
-        &:hover {
-        }
+  button,
+  p {
+    color: #172b4d;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto',
+      'Noto Sans', 'Ubuntu', 'Droid Sans', 'Helvetica Neue', sans-serif;
+    font-size: 14px;
+    line-height: 20px;
+    font-weight: 400;
+    box-sizing: border-box;
+    display: inline-flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: 3px;
+    height: 32px;
+    max-width: 400px;
+    padding-left: 32px;
+    position: relative;
+    cursor: pointer;
+    padding: 6px 12px;
+    text-decoration: none;
+    box-shadow: none;
+    border: none;
+    transition-property: background-color, border-color, box-shadow;
+    transition-duration: 85ms;
+    transition-timing-function: ease;
+    background-color: rgba(255, 255, 255, 0.2);
+    color: #ffffff;
+    &:hover {
+      background-color: rgba(255, 255, 255, 0.3);
+      color: #ffffff;
     }
-    p {
-        font-weight: bold;
+  }
+  p {
+    font-weight: bold;
+  }
+  .star-board-btn {
+    &.active {
+      color: yellow;
     }
-    .star-board-btn {
-        &.active {
-            color: yellow;
-        }
+  }
+  .board-board-btn {
+    -webkit-text-size-adjust: 100%;
+    :first-child {
+      margin: 1px;
     }
-    .board-board-btn {
-        -webkit-text-size-adjust: 100%;
-        :first-child {
-            margin: 1px;
-        }
-    }
+  }
+}
+
+.first-board-part {
+  display: flex;
+  gap: 6px;
+}
+
+.second-board-part {
+  display: flex;
+  gap: 6px;
 }
