in 3 in the morining

--- a/src/assets/styles/cmps/_app-header.scss
+++ b/src/assets/styles/cmps/_app-header.scss
@@ -34,6 +34,12 @@
     &:last-of-type {
       justify-content: flex-end;
     }
+    .create-btn{
+      margin: 0;
+      font-weight: 400;
+      padding: 0 12px;
+      background-color: rgba(9, 30, 66, 0.04) !important;
+    }
     .user-logo-in-app-header {
       border: none;
       .letter-logo-workspace-header {
@@ -103,6 +109,7 @@
       // display: inline-block;
     }
 
+
     &:hover {
       background-color: rgba(255, 255, 255, 0.2);
     }
@@ -112,6 +119,7 @@
     align-items: center;
   }
 }
+
 
 .txt-btn-wraper {
   display: flex;
