--- a/src/assets/styles/cmps/_board-preview.scss
+++ b/src/assets/styles/cmps/_board-preview.scss
@@ -52,6 +52,16 @@
   padding: 8px;
   position: relative;
   height: 1rem;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  position: relative;
+  padding-right: 8px;
+  width: 24px;
+  height: 20px;
+  background-size: cover;
+  background-position: center center;
 }
 
 .nav-bar-btns {
@@ -65,6 +75,12 @@
   }
 }
 
+.close-nav-bar-workspace{
+background:none !important;
+align-items: center !important;
+
+
+}
 .nav-bar-btns-name {
   flex: 1;
   font-size: 14px;
@@ -85,3 +101,87 @@
 .board-preview-add-btn {
   height: 100%;
 }
+.small-btn-open-nav-bar {
+  color: #172b4d;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Noto Sans', 'Ubuntu', 'Droid Sans', 'Helvetica Neue', sans-serif;
+  font-size: 14px;
+  line-height: 20px;
+  font-weight: 400;
+  display: block;
+  svg {
+    width: 20;
+    height: 20;
+    fill: none;
+  }
+  svg:not(:root) {
+    overflow: hidden;
+}
+}
+.header-nav-bar-container {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between !important;
+  align-items: center;
+  width: 100%;
+  .username-nav-bar-logo {
+    font-size: 14px;
+    font-weight: 600;
+    margin-bottom: 0;
+    display: inline;
+  }
+  .nav-logo {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+  }
+}
+// // HELPERS TO BOARDS
+// ._1ul6gs_kHQukwk {
+//   display: flex;
+//   flex-direction: row;
+//   align-items: center;
+//   justify-content: center;
+//   width: 32px;
+//   height: 32px;
+//   margin: 0;
+//   border-radius: 3px;
+//   background-color: #f1f2f5;
+//   cursor: pointer;
+// }
+
+._3TTqkG5muwOzqZ {
+  color: #172b4d;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Noto Sans", "Ubuntu", "Droid Sans",
+    "Helvetica Neue", sans-serif;
+  font-size: 14px;
+  line-height: 20px;
+  font-weight: 400;
+  box-sizing: border-box;
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 3px;
+  cursor: pointer;
+  padding: 2px !important;
+  text-decoration: none;
+  background-color: rgba(9, 30, 66, 0.04);
+  box-shadow: none;
+  border: none;
+  transition-property: background-color, border-color, box-shadow;
+  transition-duration: 85ms;
+  transition-timing-function: ease;
+}
+// .button,
+// button {
+//   -webkit-appearance: none;
+//   border: none;
+//   border-radius: 3px;
+//   box-sizing: border-box;
+//   display: inline-block;
+//   line-height: 20px;
+//   margin-bottom: 8px;
+//   padding: 6px 12px;
+//   position: relative;
+//   text-decoration: none;
+// }
