--- a/src/assets/styles/cmps/_app-header.scss
+++ b/src/assets/styles/cmps/_app-header.scss
@@ -25,6 +25,10 @@
     padding: 0 1rem;
   }
 
+  .main-logo-txt {
+    font-family: atlata;
+  }
+
   .btn-header-container {
     flex-grow: 1;
     align-items: center;
