--- a/src/assets/styles/cmps/_home-header.scss
+++ b/src/assets/styles/cmps/_home-header.scss
@@ -10,7 +10,7 @@
     box-shadow: 0 0 10px rgba(black, 0.3);
   }
   .user-details-header {
-    .user-logo-in-app-header{
+    .user-logo-in-app-header {
       border: none;
       .letter-logo-workspace-header {
         height: 32px;
@@ -32,7 +32,7 @@
     .logo {
       display: flex;
       align-items: center;
-      font-family: caveat;
+      font-family: atlata;
       font-weight: 750;
       font-size: 36px;
       line-height: 36px;
