--- a/src/assets/styles/views/_home-page.scss
+++ b/src/assets/styles/views/_home-page.scss
@@ -1,6 +1,6 @@
 .home-page-container {
   background: linear-gradient(0deg, #fff, #eae6ff 100%);
-  font-family: "Charlie Text", sans-serif;
+  font-family: 'Charlie Text', sans-serif;
   font-size: 20px;
   margin: auto;
   .first-home-page-container {
@@ -36,7 +36,8 @@
       background-clip: padding-box;
       border: 1px solid #ced4da;
       border-radius: 6px;
-      -webkit-transition: border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
+      -webkit-transition: border-color 0.15s ease-in-out,
+        box-shadow 0.15s ease-in-out;
       transition: border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
     }
     .btn-homepage-signup {
@@ -45,7 +46,8 @@
       :nth-child(1) {
         margin: 5px;
         flex-basis: 60%;
-        -webkit-transition: border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
+        -webkit-transition: border-color 0.15s ease-in-out,
+          box-shadow 0.15s ease-in-out;
         transition: border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
         margin-right: 15px;
         &:hover {
@@ -103,8 +105,8 @@
     font-size: 1.25rem;
     line-height: 1.5;
     border-radius: 6px;
-    transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out,
-      box-shadow 0.15s ease-in-out;
+    transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out,
+      border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
     &:hover {
       border-radius: 6px;
       border: none;
@@ -116,4 +118,8 @@
       background-color: #0065ff;
     }
   }
+}
+
+.logo {
+  font-family: atlata;
 }
