--- a/src/assets/styles/cmps/_card.scss
+++ b/src/assets/styles/cmps/_card.scss
@@ -1,9 +1,10 @@
 .card-preview-container {
-    
-    border-radius: 3px 3px 0 0;
-    .card-header {
-        width: 100%;
-        height: 32px;
-    }
+  border-radius: 3px 3px 0 0;
+  .card-header {
+    width: 100%;
+    height: 32px;
+  }
 }
-
+.dragged {
+  min-height: 2px;
+}
