--- a/src/assets/styles/cmps/card-details-cmps/_card-details-checklists.scss
+++ b/src/assets/styles/cmps/card-details-cmps/_card-details-checklists.scss
@@ -10,12 +10,5 @@
 
 .checklist-header h3 {
   margin-right: auto;
+  margin-left: 13px;
 }
-
-.action-logo {
-  width: 14px;
-  height: 14px;
-  filter: invert(31%) sepia(37%) saturate(567%) hue-rotate(179deg)
-    brightness(81%) contrast(80%);
-}
-
