--- a/src/assets/styles/pages/_board.scss
+++ b/src/assets/styles/pages/_board.scss
@@ -53,6 +53,10 @@
     background-color: #00000014;
   }
 }
+
+.card-list-header-input input {
+  width: 100%;
+}
 .board-content {
   overflow-x: auto;
   overflow-y: hidden;
