--- a/src/assets/styles/cmps/card-details-cmps/_card-details-date.scss
+++ b/src/assets/styles/cmps/card-details-cmps/_card-details-date.scss
@@ -1,21 +1,42 @@
 .date-card-details-container {
   margin: 0 8px 8px 0;
   max-width: 100%;
+
   .due-soon {
     margin-left: 2px;
     text-transform: uppercase;
     color: #ffffff;
     background-color: #eb5a46;
+    font-size: 12px;
+    line-height: 16px;
+    padding: 0 4px;
+    text-transform: uppercase;
+    border-radius: 2px;
+    margin: auto 0 auto 8px;
   }
   .due-complete {
     margin-left: 2px;
     text-transform: uppercase;
     color: #ffffff;
     background-color: #61bd4f;
+    font-size: 12px;
+    line-height: 16px;
+    padding: 0 4px;
+    text-transform: uppercase;
+    border-radius: 2px;
+    margin: auto 0 auto 8px;
   }
   .due-date-change-btn {
     .buttom-arrow {
-       margin-left: 3px;
+      margin-left: 3px;
+    }
+    .due-date-date-btn {
+      color: #172b4d;
+      font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto',
+        'Noto Sans', 'Ubuntu', 'Droid Sans', 'Helvetica Neue', sans-serif;
+      font-size: 14px;
+      line-height: 20px;
+      font-weight: 400;
     }
   }
   svg {
@@ -40,5 +61,4 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
-  margin-left: 13px;
 }
