--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -82,6 +82,7 @@
 @import 'cmps/card-details-cmps/card-details-date';
 @import 'cmps/card-details-cmps/card-details-description';
 @import 'cmps/card-details-cmps/progress-bar';
+@import 'cmps/card-details-cmps/card-attachments';
 
 // @import 'cmps/card-details-cmps/card-details-desc';
 
