--- a/src/assets/styles/cmps/card-details-cmps/_card-details-activity-preview.scss
+++ b/src/assets/styles/cmps/card-details-cmps/_card-details-activity-preview.scss
@@ -1,7 +1,9 @@
 .activity-preview {
   display: flex;
   width: 100%;
-
+  height: 100px;
+  width: 400px;
+ 
   .activity-creator {
     display: flex;
 
