--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -83,6 +83,12 @@
 @import 'cmps/card-details-cmps/card-details-description';
 @import 'cmps/card-details-cmps/progress-bar';
 @import 'cmps/card-details-cmps/card-attachments';
+//Activities
+@import 'cmps/activities';
+@import 'cmps/activities-list';
+@import 'cmps/activity-preview';
+
+
 
 // @import 'cmps/card-details-cmps/card-details-desc';
 
