--- a/src/assets/styles/cmps/_home-header.scss
+++ b/src/assets/styles/cmps/_home-header.scss
@@ -36,6 +36,7 @@
       font-weight: 750;
       font-size: 36px;
       line-height: 36px;
+      margin-right: auto;
       color: #293856;
       svg {
         width: 26px;
