--- a/src/assets/styles/cmps/card-details-cmps/_card-details-checklists.scss
+++ b/src/assets/styles/cmps/card-details-cmps/_card-details-checklists.scss
@@ -12,3 +12,12 @@
   margin-right: auto;
   margin-left: 13px;
 }
+
+.activity-logo {
+  width: 36px;
+  height: 36px;
+}
+
+.activity-section {
+  gap: 11.5px;
+}
