--- a/src/assets/styles/cmps/card-details-cmps/_progress-bar.scss
+++ b/src/assets/styles/cmps/card-details-cmps/_progress-bar.scss
@@ -1,6 +1,7 @@
 .progress {
   position: relative;
   margin-bottom: rem(8px);
+  margin-top: 1rem;
   .precent {
     color: $clr3;
     font-size: 11px;
