--- a/src/assets/styles/cmps/card-details-cmps/_card-details-checklist.scss
+++ b/src/assets/styles/cmps/card-details-cmps/_card-details-checklist.scss
@@ -10,7 +10,8 @@
     justify-content: center;
     line-height: 20px;
     padding: 6px 12px;
-    margin-left: 8px;
+    margin-left: 30px;
+    margin-top: 22px;
     border: none;
   }
   .checklist-delete-btn {
