--- a/src/assets/styles/cmps/card-details-cmps/card-details-description.scss
+++ b/src/assets/styles/cmps/card-details-cmps/card-details-description.scss
@@ -1,4 +1,5 @@
 .desctiption-container {
+  margin-bottom: 24px;
   .description-header {
     align-items: center;
     padding: 8px 0;
@@ -60,6 +61,20 @@
   }
   p {
     margin: 0 0 8px;
+    background-color: #091e420a;
+    border: none;
+    border-radius: 3px;
+    box-shadow: none;
+    display: block;
+    min-height: 40px;
+    padding: 8px 12px;
+    text-decoration: none;
+  }
+
+  p:hover {
+    background-color: #091e4214;
+    border: none;
+    box-shadow: none;
   }
 }
 
