--- a/src/assets/styles/cmps/_sidenav-right.scss
+++ b/src/assets/styles/cmps/_sidenav-right.scss
@@ -4,15 +4,14 @@
   width: 0; /* 0 width - change this with JavaScript */
   position: fixed; /* Stay in place */
   z-index: 1; /* Stay on top */
-  background-color: rgb(255, 255, 255); /* Black*/
+  background-color: #f4f5f7;
   overflow-x: hidden; /* Disable horizontal scroll */
-  padding-top: 60px; /* Place content 60px from the top */
   transition: 0.5s; /* 0.5 second transition effect to slide in the sidenav */
+  box-shadow: 0 12px 24px -6px #091e4240, 0 0 0 1px #091e4214;
 }
 
 /* The navigation menu links */
 .sidenav a {
-  padding: 8px 8px 8px 32px;
   text-decoration: none;
   font-size: 25px;
   color: #818181;
@@ -23,18 +22,55 @@
 /* When you mouse over the navigation links, change their color */
 .sidenav a:hover,
 .offcanvas a:focus {
-  color: #f1f1f1;
+  color: #42526e;
 }
 
 /* Position and style the close button (top right corner) */
 .sidenav .closebtn {
   position: absolute;
-  top: 0;
-  right: 25px;
-  font-size: 36px;
-  margin-left: 50px;
+  right: 9px;
+  top: 8px;
+  font-size: 24px;
 }
 
 .sidenav {
   right: 0;
+}
+
+.sidenav-header {
+  box-sizing: border-box;
+  flex: 0 0 auto;
+  height: 48px;
+  overflow: hidden;
+  padding: 0 6px 0 12px;
+  // position: relative;
+  // transition: opacity 0.2s ease-in;
+  width: 100%;
+}
+
+.board-menu-header-content {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: row;
+}
+
+.board-menu-header-divider {
+  background-color: #091e4221;
+  border: 0;
+  height: 1px;
+  margin: 16px 0;
+  padding: 0;
+  width: 100%;
+}
+
+.board-menu-content {
+  box-sizing: border-box;
+  display: flex;
+  flex: 1 1 auto;
+  height: 100%;
+  overflow-x: hidden;
+  overflow-y: auto;
+  padding: 12px 6px 12px 12px;
+  width: 100%;
 }
