--- a/src/assets/styles/cmps/_side-nav.scss
+++ b/src/assets/styles/cmps/_side-nav.scss
@@ -2,17 +2,15 @@
   height: calc(100vh - 44px);
   position: relative;
   left: 0;
-  padding: 6px 8px;
   min-width: 50px;
   overflow: hidden;
   padding-top: 0.5rem;
-  padding-left: 0.5rem;
+  padding-left: 7px;
   transition: 0.5s cubic-bezier(0.8, 0.5, 0.2, 1.4);
   display: flex;
   flex-direction: column;
   align-items: flex-start;
-  box-shadow: 1px 1px 11px 1px #0000005c;
-  border-radius: 0;
+  box-shadow: 1px 1px 11px 1px #00000018;
   z-index: 2;
   &:hover {
     background-color: rgb(255, 255, 255);
@@ -23,7 +21,11 @@
   background-color: rgb(255, 255, 255);
 }
 .leftMenu .main {
-  background-color: rgba(0, 0, 0, 0.15);
+  background: linear-gradient(
+    180deg,
+    rgba(0, 0, 0, 0.3) 0%,
+    rgba(0, 0, 0, 0) 100%
+  );
 }
 .nav-logo {
   background: linear-gradient(#006644, #00875a);
