--- a/src/assets/styles/cmps/_app-header.scss
+++ b/src/assets/styles/cmps/_app-header.scss
@@ -23,6 +23,7 @@
     width: 100%;
     height: 1.1rem;
     padding: 0 1rem;
+    // padding-top: 3px;
   }
 
   .main-logo-txt {
@@ -38,7 +39,7 @@
     &:last-of-type {
       justify-content: flex-end;
     }
-    .create-btn{
+    .create-btn {
       margin: 0;
       font-weight: 400;
       padding: 0 12px;
@@ -113,7 +114,6 @@
       // display: inline-block;
     }
 
-
     &:hover {
       background-color: rgba(255, 255, 255, 0.2);
     }
@@ -121,9 +121,9 @@
 
   .logo {
     align-items: center;
+    padding-top: 3px;
   }
 }
-
 
 .txt-btn-wraper {
   display: flex;
