--- a/src/assets/styles/cmps/_board-preview.scss
+++ b/src/assets/styles/cmps/_board-preview.scss
@@ -7,6 +7,8 @@
   list-style: none;
   display: flex;
   flex-wrap: wrap;
+  padding: 0;
+  margin: 0;
   justify-content: flex-start;
 }
 
@@ -224,11 +226,14 @@
 //   cursor: pointer;
 // }
 
+._1ul6gs_kHQukwk ._3TTqkG5muwOzqZ {
+}
 ._3TTqkG5muwOzqZ {
   color: #172b4d;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto',
     'Noto Sans', 'Ubuntu', 'Droid Sans', 'Helvetica Neue', sans-serif;
   font-size: 14px;
+  margin-right: 9px;
   line-height: 20px;
   font-weight: 400;
   box-sizing: border-box;
