--- a/src/assets/styles/cmps/_search-nav-bar.scss
+++ b/src/assets/styles/cmps/_search-nav-bar.scss
@@ -1,115 +1,116 @@
 .search-bar-container {
-    color: #172b4d;
-    font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Noto Sans, Ubuntu, Droid Sans, Helvetica Neue,
-        sans-serif;
-    font-size: 14px;
-    font-weight: 400;
-    line-height: 20px;
+  color: #172b4d;
+  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Noto Sans,
+    Ubuntu, Droid Sans, Helvetica Neue, sans-serif;
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 20px;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
+  flex-wrap: wrap;
+  padding: 20px 16px 9px 7px;
+  margin: 0 auto;
+  max-width: 1250px;
+  label {
+    color: #5e6c84;
+    display: block;
+    font-size: 12px;
+    font-weight: 700;
+    line-height: 16px;
+    margin-bottom: 4px;
+    margin-top: 12px;
+  }
+  input {
+    margin-top: 0;
+  }
+  .left-search-bar-container {
+    flex-wrap: wrap;
     display: flex;
     flex-direction: row;
-    align-items: center;
-    justify-content: space-between;
-    flex-wrap: wrap;
-    padding: 20px 0 8px;
-    margin: 0 auto;
-    max-width: 1250px;
-    label{
-        color: #5e6c84;
-        display: block;
-        font-size: 12px;
-        font-weight: 700;
-        line-height: 16px;
-        margin-bottom: 4px;
-        margin-top: 12px;
+    .sort-by-container {
+      display: flex;
+      margin-right: 4px;
+      flex-direction: column;
+      .select-sort-by-workspace {
+        margin-left: 0px;
+        width: 100%;
+        text-overflow: ellipsis;
+        overflow: hidden;
+        white-space: nowrap;
+      }
     }
-    input{
-        margin-top: 0;
+    .filter-by-container {
+      display: flex;
+      margin-right: 4px;
+      flex-direction: column;
+      .select-filter-by-workspace {
+      }
     }
-    .left-search-bar-container {
-        
-        flex-wrap: wrap;
-        display: flex;
-        flex-direction: row;
-        .sort-by-container {
-            display: flex;
-            margin-right: 4px;
-            flex-direction: column;
-            .select-sort-by-workspace {
-                margin-left: 0px;
-                width: 100%;
-                text-overflow: ellipsis;
-                overflow: hidden;
-                white-space: nowrap;
-            }
-        }
-        .filter-by-container {
-            display: flex;
-            margin-right: 4px;
-            flex-direction: column;
-            .select-filter-by-workspace {
-            }
-        }
+  }
+  .search-all-work-space {
+    display: flex;
+    flex-direction: column;
+    .search-all-work-space-form {
+      .search-all-work-filter-input {
+      }
     }
-    .search-all-work-space {
-        display: flex;
-        flex-direction: column;
-        .search-all-work-space-form {
-            .search-all-work-filter-input {
-            }
-        }
-    }
+  }
 }
 
 ._3TTqkG5muwOzqZ {
-    color: #172b4d;
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Noto Sans', 'Ubuntu', 'Droid Sans', 'Helvetica Neue', sans-serif;
-    font-size: 14px;
-    line-height: 20px;
-    font-weight: 400;
-    box-sizing: border-box;
-    display: inline-flex;
-    align-items: center;
-    justify-content: center;
-    border-radius: 3px;
-    cursor: pointer;
-    padding: 6px 12px;
-    text-decoration: none;
-    background-color: rgba(9, 30, 66, 0.04);
-    box-shadow: none;
-    border: none;
-    transition-property: background-color, border-color, box-shadow;
-    transition-duration: 85ms;
-    transition-timing-function: ease;
+  color: #172b4d;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto',
+    'Noto Sans', 'Ubuntu', 'Droid Sans', 'Helvetica Neue', sans-serif;
+  font-size: 14px;
+  line-height: 20px;
+  font-weight: 400;
+  box-sizing: border-box;
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 3px;
+  cursor: pointer;
+  padding: 6px 12px;
+  text-decoration: none;
+  background-color: rgba(9, 30, 66, 0.04);
+  box-shadow: none;
+  border: none;
+  transition-property: background-color, border-color, box-shadow;
+  transition-duration: 85ms;
+  transition-timing-function: ease;
 }
 .css-ufz0vj-control {
-    -webkit-box-align: center;
-    align-items: center;
-    border-radius: 3px;
-    cursor: default;
-    display: flex;
-    flex-wrap: wrap;
-    -webkit-box-pack: justify;
-    justify-content: space-between;
-    min-height: 36px;
-    position: relative;
-    transition: all 100ms ease 0s;
-    box-sizing: border-box;
-    border: none;
-    height: 36px;
-    padding: 8px 12px;
-    outline: 0px !important;
+  -webkit-box-align: center;
+  align-items: center;
+  border-radius: 3px;
+  cursor: default;
+  display: flex;
+  flex-wrap: wrap;
+  -webkit-box-pack: justify;
+  justify-content: space-between;
+  min-height: 36px;
+  position: relative;
+  transition: all 100ms ease 0s;
+  box-sizing: border-box;
+  border: none;
+  height: 36px;
+  padding: 8px 12px;
+  outline: 0px !important;
 }
 
 ._1Dp3s5P2VP237V {
-    box-shadow: inset 0 0 0 2px #dfe1e6 !important;
-    height: 36px !important;
-    width: 200px !important;
-    justify-content: space-between !important;
+  box-shadow: inset 0 0 0 2px #dfe1e6 !important;
+  height: 36px !important;
+  width: 200px !important;
+  justify-content: space-between !important;
 }
 ._2RUB_6xy0LOMWG {
-    color: #172b4d;
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Noto Sans', 'Ubuntu', 'Droid Sans', 'Helvetica Neue', sans-serif !important;
-    font-size: 14px !important;
-    line-height: 20px !important;
-    font-weight: 400 !important;
+  color: #172b4d;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto',
+    'Noto Sans', 'Ubuntu', 'Droid Sans', 'Helvetica Neue', sans-serif !important;
+  font-size: 14px !important;
+  line-height: 20px !important;
+  font-weight: 400 !important;
 }
