--- a/src/assets/styles/cmps/_board-preview.scss
+++ b/src/assets/styles/cmps/_board-preview.scss
@@ -17,7 +17,17 @@
   cursor: pointer;
   padding: 4px 8px;
   position: relative;
-  flex-basis: 33%;
+  flex-basis: 25%;
+}
+
+.board-tile-fade {
+  background-color: #00000026;
+  bottom: 0;
+  left: 0;
+  position: absolute;
+  right: 0;
+  top: 0;
+  z-index: -3;
 }
 
 .board-preview {
@@ -264,3 +274,10 @@
 //   position: relative;
 //   text-decoration: none;
 // }
+
+@media only screen and (min-width: 751px) and (max-width: 900px),
+  only screen and (min-width: 901px) and (max-width: 1280px) {
+  .board-preview-wrapper {
+    flex-basis: 33.33%;
+  }
+}
