--- a/src/assets/styles/cmps/_side-nav.scss
+++ b/src/assets/styles/cmps/_side-nav.scss
@@ -2,10 +2,10 @@
   height: calc(100vh - 44px);
   position: relative;
   left: 0;
-  min-width: 50px;
+  min-width: 40px;
   overflow: hidden;
-  padding-top: 0.5rem;
-  padding-left: 7px;
+  padding-top: 5px;
+  padding-left: 2px;
   transition: 0.5s cubic-bezier(0.8, 0.5, 0.2, 1.4);
   display: flex;
   flex-direction: column;
