--- a/src/assets/styles/cmps/_search-nav-bar.scss
+++ b/src/assets/styles/cmps/_search-nav-bar.scss
@@ -10,9 +10,7 @@
   align-items: center;
   justify-content: space-between;
   flex-wrap: wrap;
-  padding: 20px 16px 9px 7px;
-  margin: 0 auto;
-  max-width: 1250px;
+  padding: 20px 0 9px 7px;
   label {
     color: #5e6c84;
     display: block;
