--- a/src/assets/styles/cmps/_board-preview.scss
+++ b/src/assets/styles/cmps/_board-preview.scss
@@ -37,7 +37,7 @@
   padding: 8px;
   position: relative;
   z-index: 0;
-  height: 80px;
+  height: 99px;
   &:hover {
     background-color: #0006;
   }
@@ -220,6 +220,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    margin: 0;
   }
 }
 // // HELPERS TO BOARDS
