--- a/src/assets/styles/cmps/_workspace-header.scss
+++ b/src/assets/styles/cmps/_workspace-header.scss
@@ -1,84 +1,99 @@
 .tabbed-pane-header-wrapper {
+  display: flex;
+  justify-content: center;
+  margin: 0 auto;
+  // max-width: 650px;
+  padding: 32px;
+  position: relative;
+  text-align: center;
+  background-color: #f4f5f7;
+  .first-letter-logo-workspace-header {
+    background: linear-gradient(#006644, #00875a);
+    height: 85px;
+    width: 85px;
+    font-size: 60px;
+    border-radius: 4px;
+    color: white;
+    text-transform: capitalize;
+    margin-right: 10px;
+  }
+  .workspace-header-container {
     display: flex;
-    justify-content: center;
-    margin: 0 auto;
-    // max-width: 650px;
-    padding: 32px;
-    position: relative;
-    text-align: center;
-    background-color: #f4f5f7;
-    .first-letter-logo-workspace-header {
-        background: linear-gradient(#006644, #00875a);
-        height: 85px;
-        width: 85px;
-        font-size: 60px;
-        border-radius: 4px;
-        color: white;
-        text-transform: capitalize;
-        margin-right: 10px;
+    flex-direction: column;
+    margin-left: 10px;
+  }
+  .username-container {
+    display: flex;
+    align-items: center;
+    color: #172b4d;
+    font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Noto Sans,
+      Ubuntu, Droid Sans, Helvetica Neue, sans-serif;
+    font-size: 14px;
+    font-weight: 400;
+    line-height: 20px;
+    .user-name-h1 {
+      font-size: 24px;
+      font-weight: 600;
+      line-height: 28px;
+      margin: 0;
+      display: inline;
+      margin-right: 4px;
     }
-    .workspace-header-container {
-        display: flex;
-        flex-direction: column;
-        margin-left: 10px;
+    .private-lock {
+      font-size: 12px;
+      color: #5e6c84;
+      padding: 0 6px 0 2px;
+      vertical-align: bottom;
     }
-    .username-container {
-        display: flex;
-        align-items: center;
-        color: #172b4d;
-        font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Noto Sans, Ubuntu, Droid Sans, Helvetica Neue,
-            sans-serif;
-        font-size: 14px;
-        font-weight: 400;
-        line-height: 20px;
-        .user-name-h1 {
-            font-size: 24px;
-            font-weight: 600;
-            line-height: 28px;
-            margin: 0 0 12px;
-            display: inline;
-            margin-right: 4px;
-        }
-        .private-lock {
-            font-size: 12px;
-            color: #5e6c84;
-            padding: 0 6px 0 2px;
-            vertical-align: bottom;
-        }
-        .lock-style {
-            color: rgb(235, 90, 70);
-            display: inline-block;
-            fill: inherit;
-            flex-shrink: 0;
-            line-height: 1;
-        }
+    .lock-style {
+      color: rgb(235, 90, 70);
+      display: inline-block;
+      fill: inherit;
+      flex-shrink: 0;
+      line-height: 1;
     }
-    .edit-workspace {
-        align-items: center;
-        background-color: #091e420a;
-        border: none;
-        border-radius: 3px;
-        box-shadow: none;
-        box-sizing: border-box;
-        color: #172b4d;
-        font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Noto Sans", "Ubuntu", "Droid Sans",
-            "Helvetica Neue", sans-serif;
-        font-size: 14px;
-        line-height: 20px;
-        font-weight: 400;
-        box-sizing: border-box;
-        display: inline-flex;
-        cursor: pointer;
-        display: inline-flex;
+    .lock-style svg {
+      width: 16px;
+      height: 16px;
+    }
+  }
+  .edit-workspace {
+    background-color: #091e420a;
+    border: none;
+    gap: 4px;
+    border-radius: 3px;
+    box-shadow: none;
+    box-sizing: border-box;
+    color: #172b4d;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto',
+      'Noto Sans', 'Ubuntu', 'Droid Sans', 'Helvetica Neue', sans-serif;
+    font-size: 14px;
+    line-height: 20px;
+    font-weight: 400;
+    box-sizing: border-box;
+    display: inline-flex;
+    cursor: pointer;
+    display: inline-flex;
 
-        font-size: 14px;
-        font-weight: 400;
-        justify-content: center;
-        line-height: 20px;
-        padding: 6px 12px;
-        text-decoration: none;
-        transition-duration: 85ms;
-        transition-property: background-color, border-color, box-shadow;
-        transition-timing-function: ease;
-    }
+    font-size: 14px;
+    font-weight: 400;
+    justify-content: center;
+    line-height: 20px;
+    padding: 6px 12px;
+    text-decoration: none;
+    transition-duration: 85ms;
+    transition-property: background-color, border-color, box-shadow;
+    transition-timing-function: ease;
+    margin-top: 10px;
+  }
+}
+
+.nch-icon svg {
+  width: 17px;
+  height: 17px;
+}
+
+.private-lock {
+  display: flex;
+  align-items: center;
 }
