--- a/src/assets/styles/cmps/card-preview/_card-preview-labels.scss
+++ b/src/assets/styles/cmps/card-preview/_card-preview-labels.scss
@@ -23,15 +23,13 @@
 
   .check-icon {
     display: flex;
-    font-family: fontawesome-far;
-    margin-inline-end: 5px;
-    &::before {
+    margin-inline-end: 1px;
+    & {
       width: 16px;
       height: 16px;
       display: flex;
       align-items: center;
       justify-content: center;
-      content: '\f14a';
     }
   }
 
@@ -62,6 +60,8 @@
   }
   &.open {
     display: flex;
+    max-width: 198px;
+    padding: 0 8px;
     justify-content: center;
     color: white;
     height: 20px;
