--- a/src/assets/styles/setup/_variables.scss
+++ b/src/assets/styles/setup/_variables.scss
@@ -10,7 +10,8 @@ $clr3: #5e6c84; //muted-color
 $clr4: #172b4d; //txt-color
 $clr5: #c4c9cc; //main-nav home-user
 $clr6: #ebecf0; //list-color
-$clr7: #42526e; // card-details-color
+$clr7: #172b4d;
+// card-details-color
 $clr8: #b04632;
 
 // BackgroundColors
