--- a/src/assets/styles/views/_home-page.scss
+++ b/src/assets/styles/views/_home-page.scss
@@ -45,32 +45,54 @@
       width: 80%;
       :nth-child(1) {
         margin: 5px;
-        flex-basis: 60%;
+        flex-basis: 30%;
         -webkit-transition: border-color 0.15s ease-in-out,
           box-shadow 0.15s ease-in-out;
         transition: border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
         margin-right: 15px;
-        &:hover {
-          box-shadow: 2px 2px 2px 2px #0065ff;
+
+        :nth-child(2) {
+          flex-basis: 40%;
         }
-      }
-      :nth-child(2) {
-        flex-basis: 40%;
       }
 
       .btn-home-page-submit {
-        border-radius: 6px;
-        border: none;
-        outline: none;
+        color: #0065ff;
+        background-color: transparent;
+        background-image: none;
+        border: 1px solid #0065ff;
         font-size: 1.25rem;
+        margin: 2.5rem 0;
         line-height: 2.75rem;
         letter-spacing: 1px;
-        color: #fff;
-        background-color: #0065ff;
+        font-weight: 400;
+        text-align: center;
+        white-space: nowrap;
+        vertical-align: middle;
+        -webkit-user-select: none;
+        -moz-user-select: none;
+        -ms-user-select: none;
+        user-select: none;
+        padding: 0.375rem 0.75rem;
+        font-size: 1.25rem;
+        line-height: 1.5;
+        border-radius: 6px;
+
+        &:hover {
+          border-radius: 6px;
+          color: #fff;
+          background-color: #0065ff;
+          border: 1px solid transparent;
+        }
       }
       .introduction-signup {
       }
     }
+  }
+  .info-btn {
+    color: #fff;
+    background-color: #0065ff;
+    margin: 1rem;
   }
 
   .nav-btns a:last-child {
@@ -90,7 +112,7 @@
     padding-bottom: 5rem !important;
     margin: auto;
   }
-  button {
+  .info-btn {
     display: inline-block;
     font-weight: 400;
     text-align: center;
@@ -107,16 +129,13 @@
     border-radius: 6px;
     transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out,
       border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
+    color: #fff;
+    background-color: #0065ff;
     &:hover {
-      border-radius: 6px;
-      border: none;
-      outline: none;
       // font-size: 1.25rem;
       // line-height: 2.75rem;
-      letter-spacing: 1px;
       color: #fff;
-      background-color: #0065ff;
+      background-color: #0047b1;
     }
   }
 }
-
