--- a/src/assets/styles/cmps/_app-header.scss
+++ b/src/assets/styles/cmps/_app-header.scss
@@ -18,6 +18,15 @@
     min-width: 100vw;
   }
 
+  .search-input-header input::-webkit-input-placeholder {
+    font-size: 1px;
+  }
+  .search-icon {
+    width: 19px;
+    height: 19px;
+    margin-left: 4px;
+  }
+
   .main-logo {
     position: relative;
     width: 100%;
@@ -40,10 +49,21 @@
       justify-content: flex-end;
     }
     .create-btn {
+      border: none;
+      background-color: transparent;
+      border-radius: 0.2rem;
+      align-items: center;
+      color: #ffffff;
+      display: flex;
+      height: 32px;
+      white-space: nowrap;
+      transition: 0.15s;
+      cursor: pointer;
       margin-left: 5px;
       font-weight: 400;
-      padding: 0 12px;
+      padding: 7px;
       background-color: rgba(0, 0, 0, 0.24);
+
       &:hover {
         background-color: rgba(255, 255, 255, 0.2);
       }
@@ -123,6 +143,28 @@
   }
 }
 
+.btn-header-more {
+  border: none;
+  background-color: transparent;
+  border-radius: 0.2rem;
+  align-items: center;
+  color: #ffffff;
+  display: none;
+  height: 32px;
+  white-space: nowrap;
+  transition: 0.15s;
+  cursor: pointer;
+
+  span {
+    padding: 0 2px 0 8px;
+    // display: inline-block;
+  }
+
+  &:hover {
+    background-color: rgba(255, 255, 255, 0.2);
+  }
+}
+
 .logo {
   align-items: center;
   padding-top: 3px;
@@ -132,4 +174,43 @@
   display: flex;
   align-items: center;
   gap: 5px;
+}
+
+@media (max-width: $normal-breakpoint) {
+  .search-icon {
+    display: none;
+  }
+
+  .search-input-header {
+    display: none;
+  }
+
+  .board-preview-wrapper {
+    flex-basis: 45%;
+  }
+}
+@media (max-width: $mobile-breakpoint) {
+  .btn-header-more {
+    display: flex;
+  }
+  .search-bar-container {
+    display: none;
+  }
+  .search-icon {
+    display: none;
+  }
+  .board-preview-wrapper {
+    flex-basis: 45%;
+  }
+
+  .btn-header {
+    display: none;
+  }
+
+  .search-icon {
+    display: none;
+  }
+  .search-input-header {
+    display: none;
+  }
 }
