--- a/src/assets/styles/cmps/card-details-cmps/_card-details-cover.scss
+++ b/src/assets/styles/cmps/card-details-cmps/_card-details-cover.scss
@@ -1,5 +1,5 @@
 .card-details-cover {
-  height: 116px;
+  min-height: 116px;
   border-top-left-radius: $borderRad1;
   border-top-right-radius: $borderRad1;
   position: relative;
