--- a/src/assets/styles/cmps/_loader.scss
+++ b/src/assets/styles/cmps/_loader.scss
@@ -4,3 +4,9 @@
   align-items: center;
   justify-content: center;
 }
+
+.images-screen {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
