--- a/src/assets/styles/cmps/_nav-bar-board.scss
+++ b/src/assets/styles/cmps/_nav-bar-board.scss
@@ -80,3 +80,12 @@
   display: flex;
   gap: 5px;
 }
+
+@media (max-width: $mobile-breakpoint) {
+  .workspace-board-btn button {
+    display: none;
+  }
+  .invite-member-board-btn button {
+    display: none;
+  }
+}
