--- a/src/assets/styles/cmps/_workspace-header.scss
+++ b/src/assets/styles/cmps/_workspace-header.scss
@@ -97,3 +97,9 @@
   display: flex;
   align-items: center;
 }
+
+@media (max-width: $mobile-breakpoint) {
+  .workspace-container {
+    overflow-x: unset;
+  }
+}
