--- a/src/assets/styles/cmps/card-preview/_card-preview.scss
+++ b/src/assets/styles/cmps/card-preview/_card-preview.scss
@@ -1,13 +1,11 @@
 .card-preview-container {
   position: relative;
 
-  @include for-wide-layout {
-    &:hover {
-      filter: brightness(95%);
-      .card-preview-edit-btn {
-        background-color: rgba(#f4f5f7, 0.8);
-        opacity: 1;
-      }
+  &:hover {
+    filter: brightness(95%);
+    .card-preview-edit-btn {
+      background-color: rgba(#f4f5f7, 0.8);
+      opacity: 1;
     }
   }
 
@@ -83,6 +81,16 @@
       align-items: flex-end;
     }
   }
+}
+
+.card-preview-name-full {
+  font-size: 16px;
+  font-weight: 500;
+  line-height: 20px;
+  color: #172b4d;
+  display: block;
+  overflow: hidden;
+  padding-bottom: 2px;
 }
 
 .card-content {
