--- a/src/assets/styles/cmps/popovers/_create-board-pop-over.scss
+++ b/src/assets/styles/cmps/popovers/_create-board-pop-over.scss
@@ -1,59 +1,143 @@
 .create-board-popover {
-    position: fixed;
-    top: 40px;
+  position: fixed;
+  top: 40px;
+  left: 50%;
+  transform: translateX(-50%);
+  z-index: 2;
+  .board-preview {
+    width: 21rem;
+    margin-inline-end: 8px;
+    border-radius: 3px;
+    color: white;
+    padding: 10px 10px 10px 16px;
+    input {
+      font-size: 16px;
+      font-weight: 700;
+      line-height: 24px;
+      padding: 2px 8px;
+      background-color: transparent;
+      border: none;
+      border-radius: 3px;
+      color: white;
+      &:hover {
+        background: rgba(255, 255, 255, 0.15);
+      }
+      &::placeholder {
+        font-size: 16px;
+        font-weight: 700;
+        color: rgba(255, 255, 255, 0.637);
+      }
+      &:focus {
+        background: rgba(255, 255, 255, 0.3);
+      }
+    }
+  }
+  .color-palette {
+    display: grid;
+    grid-template-columns: repeat(3, 28px);
+    gap: 6px 8px;
+    margin-bottom: 0;
+    &:first-child {
+      margin-bottom: 6px;
+    }
+    label[name='label-color'] {
+      width: 28px;
+      height: 28px;
+      margin: 0;
+    }
+  }
+  .primary-btn {
+    margin-top: 8px;
+    &.disabled {
+      border: none;
+      color: #a5adba;
+      cursor: not-allowed;
+      background-color: #f4f5f7;
+    }
+  }
+}
+
+//images
+
+.image-palette {
+  width: 100%;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  justify-content: center;
+  .image-palette-search {
+    position: relative;
+
+    .search-input {
+      width: 100%;
+      outline: none;
+      border: none;
+      box-shadow: inset 0 0 0 2px #dfe1e6;
+      background-color: #fafbfc;
+      border-radius: $borderRad1;
+      margin-bottom: 12px;
+      padding: 8px 8px 8px 33px;
+      transition-property: background-color, border-color, box-shadow;
+      transition-duration: 85ms;
+      transition-timing-function: ease;
+      &:focus {
+        box-shadow: inset 0 0 0 2px #0079bf;
+      }
+    }
+  }
+  .images {
+    display: grid;
+    grid-template-columns: repeat(2, 50%);
+    grid-gap: 8px;
+    label[name='label-img'] {
+      width: 140px;
+      height: 100px;
+      border-radius: 3px;
+      background-size: cover;
+      background-position: center;
+      cursor: pointer;
+      &:hover {
+        filter: brightness(90%);
+      }
+    }
+  }
+  input[type='radio'] {
+    opacity: 0;
+    position: absolute;
+    width: 0;
+    height: 0;
+  }
+  // svg {
+  //     z-index: 2;
+  // }
+}
+
+.MuiPaper-root {
+  position: relative;
+  padding: 1rem;
+  overflow-y: auto;
+  max-height: 70vh;
+}
+.MuiPopover-paper {
+  top: 39px;
+  left: calc(50% + 258px);
+  transform: translateX(-50%) !important;
+}
+
+@media (max-width: $mobile-breakpoint) {
+  .create-board-preview {
+    display: flex;
+    flex-direction: column;
+    gap: 9px;
+  }
+  .MuiPapaer-root {
+    top: 16px;
     left: 50%;
     transform: translateX(-50%);
-    z-index: 2;
-    .board-preview {
-        width: 21rem;
-        margin-inline-end: 8px;
-        border-radius: 3px;
-        color: white;
-        padding: 10px 10px 10px 16px;
-        input {
-            font-size: 16px;
-            font-weight: 700;
-            line-height: 24px;
-            padding:2px 8px;
-            background-color: transparent;
-            border:none;
-            border-radius: 3px;
-            color:white;
-            &:hover{
-                background: rgba(255, 255, 255, 0.15)
-            }
-            &::placeholder{
-                font-size: 16px;
-            font-weight: 700;
-            color: rgba(255, 255, 255, 0.637);
-
-            }
-            &:focus{
-                background: rgba(255, 255, 255, 0.3)
-            }
-        }
-    }
-    .color-palette {
-        display: grid;
-        grid-template-columns: repeat(3, 28px);
-        gap: 6px 8px;
-        margin-bottom: 0;
-        &:first-child {
-            margin-bottom: 6px;
-        }
-        label[name="label-color"] {
-            width: 28px;
-            height: 28px;
-            margin: 0;
-        }
-    }
-    .primary-btn{
-        margin-top: 8px;
-        &.disabled{
-            border: none;
-            color: #A5ADBA;
-            cursor: not-allowed;
-            background-color: #F4F5F7;
-        }
-    }
+  }
+  .MuiPopover-paper {
+    top: 16px;
+    left: 50%;
+    transform: translateX(-50%) !important;
+  }
 }
