--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -19,12 +19,12 @@
 @import 'views/about-us';
 @import 'views/home-page';
 @import 'views/board-app';
-@import 'views/review-app';
 @import 'views/about-us';
 @import 'views/home-page';
-@import 'views/review-app';
+@import 'views/login-signup';
 @import 'views/workspace';
 @import 'views/card-details1';
+@import 'views/dashboard';
 
 // Components
 @import 'cmps/app-header';
@@ -34,11 +34,9 @@
 @import 'views/about-us';
 @import 'views/home-page';
 @import 'views/board-app';
-@import 'views/review-app';
 @import 'views/about-us';
 @import 'views/home-page';
 @import 'views/board-app';
-@import 'views/review-app';
 @import 'views/workspace';
 @import 'cmps/card-details-cmps/card-details-date';
 @import 'cmps/card-details-cmps/card-details-actions';
@@ -47,6 +45,7 @@
 @import 'cmps/popovers/cover-pop-over';
 @import 'cmps/popovers/create-board-pop-over';
 @import 'cmps/popovers/popover-user';
+@import 'cmps/popovers/edit-pop-over';
 
 // Components
 @import 'cmps/app-header';
@@ -70,6 +69,7 @@
 @import 'cmps/card-details-cmps/card-labels';
 @import 'cmps/sidenav-right';
 @import 'cmps/card-preview';
+@import 'cmps/chat.scss';
 //Components card-details-cmps
 @import 'cmps/card-details-cmps/card-details-activity-list';
 @import 'cmps/card-details-cmps/card-details-activity-preview';
@@ -87,8 +87,6 @@
 @import 'cmps/activities';
 @import 'cmps/activities-list';
 @import 'cmps/activity-preview';
-
-
 
 // @import 'cmps/card-details-cmps/card-details-desc';
 
