--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -46,6 +46,8 @@
 @import 'cmps/popovers/create-board-pop-over';
 @import 'cmps/popovers/popover-user';
 @import 'cmps/popovers/edit-pop-over';
+@import 'cmps/card-details-cmps/comment-add';
+@import 'cmps/sticker';
 
 // Components
 @import 'cmps/app-header';
