--- a/src/assets/styles/cmps/_activity-preview.scss
+++ b/src/assets/styles/cmps/_activity-preview.scss
@@ -48,3 +48,17 @@
   padding-top: 6px;
   margin-bottom: 20px;
 }
+
+.comment-action {
+  background-color: #fff;
+  border-radius: 3px;
+  box-shadow: 0 1px 2px -1px #091e4240, 0 0 0 1px #091e4214;
+  box-sizing: border-box;
+  clear: both;
+  display: inline-block;
+  margin: 4px 2px 4px 0;
+  max-width: 100%;
+  padding: 8px 12px;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
