--- a/src/assets/styles/cmps/_card.scss
+++ b/src/assets/styles/cmps/_card.scss
@@ -16,3 +16,19 @@
 .card-preview-bagdes {
   padding: 0 1px 0 6px;
 }
+
+.card-stickers-area {
+  border-radius: 3px;
+  bottom: 0;
+  left: 0;
+  overflow: hidden;
+  position: absolute;
+  right: 0;
+  top: 0;
+  z-index: 5;
+}
+
+.ddcontainer {
+  display: unset !important;
+  position: unset !important;
+}
