--- a/src/assets/styles/cmps/_sidenav-right.scss
+++ b/src/assets/styles/cmps/_sidenav-right.scss
@@ -3,7 +3,7 @@
   height: 100%; /* 100% Full-height */
   width: 0; /* 0 width - change this with JavaScript */
   position: fixed; /* Stay in place */
-  z-index: 1; /* Stay on top */
+  z-index: 5; /* Stay on top */
   background-color: #f4f5f7;
   overflow-x: hidden; /* Disable horizontal scroll */
   transition: 0.5s; /* 0.5 second transition effect to slide in the sidenav */
@@ -72,6 +72,62 @@
   overflow-y: auto;
   padding: 12px 6px 12px 12px;
   width: 100%;
+  ul {
+    padding-bottom: 16px;
+    margin-bottom: 16px;
+    border-bottom: 1px solid rgba(9, 30, 66, 0.13);
+  }
+  li,
+  .activity {
+    border-radius: 3px;
+    display: block;
+    font-weight: 600;
+    line-height: 20px;
+    text-decoration: none;
+    padding: 6px 6px 6px 40px;
+    position: relative;
+    cursor: pointer;
+    &:hover {
+      background-color: rgba(9, 30, 66, 0.08);
+    }
+    .menu-icon,
+    svg,
+    span {
+      font-size: 20px;
+      height: 20px;
+      line-height: 20px;
+      width: 20px;
+      position: absolute;
+      top: 6px;
+      left: 12px;
+      color: #42526e;
+      path {
+        fill: #42526e;
+      }
+    }
+    span {
+      font-size: 20px;
+      height: 20px;
+      left: 12px;
+      line-height: 20px;
+      position: absolute;
+      top: 6px;
+      width: 20px;
+      background-position: 50%;
+      background-size: cover;
+      display: inline-block;
+      border-radius: 3px;
+    }
+  }
+  li.sticker-link i {
+    font-size: 20px;
+    height: 20px;
+    left: 12px;
+    line-height: 20px;
+    position: absolute;
+    top: 6px;
+    width: 20px;
+  }
 }
 
 .board-menu-header-title {
