--- a/src/assets/styles/basics/_helpers.scss
+++ b/src/assets/styles/basics/_helpers.scss
@@ -45,6 +45,9 @@
 .justify-space-between {
   justify-content: space-between;
 }
+.align-center {
+  align-items: center;
+}
 
 .wrap {
   flex-wrap: wrap;
