--- a/src/assets/styles/cmps/_search-nav-bar.scss
+++ b/src/assets/styles/cmps/_search-nav-bar.scss
@@ -65,6 +65,7 @@
   line-height: 20px;
   font-weight: 400;
   box-sizing: border-box;
+  margin-right: 2px;
   display: inline-flex;
   align-items: center;
   justify-content: center;
