--- a/src/assets/styles/cmps/_side-nav.scss
+++ b/src/assets/styles/cmps/_side-nav.scss
@@ -28,7 +28,7 @@
   );
 }
 .nav-logo {
-  background: linear-gradient(#006644, #00875a);
+  background: linear-gradient(#b22865, #cd5a91);
   display: flex;
   align-items: center;
   justify-content: center;
